--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link>
+    <script src="index.js"></script>
+    <title>Connect Four</title>
+</head>
 
 <body>
-    <div class="container">
-        <div class="item" id="1">1</div>
-        <div class="item" id="2">2</div>
-        <div class="item" id="3">3</div>
-        <div class="item" id="4">4</div>
-        <div class="item" id="5">5</div>
-        <div class="item" id="6">6</div>
-        <div class="item" id="7">7</div>
-        <div class="item" id="8">8</div>
-        <div class="item" id="9">9</div>
-        <div class="item" id="10">10</div>
-        <div class="item" id="11">11</div>
-        <div class="item" id="12">12</div>
-        <div class="item" id="13">13</div>
-        <div class="item" id="14">14</div>
-        <div class="item" id="15">15</div>
-        <div class="item" id="16">16</div>
-    </div>
+    <h2>Current Player: Player<span id="current-player">1</span></h2>
+    <h2 id="result"></h2>
 
+    <div class="grid">
+        <div class="square" id="1">1</div>
+        <div class="square" id="2">2</div>
+        <div class="square" id="3">3</div>
+        <div class="square" id="4">4</div>
+        <div class="square" id="5">5</div>
+        <div class="square" id="6">6</div>
+        <div class="square" id="7">7</div>
+        <div class="square" id="8">8</div>
+        <div class="square" id="9">9</div>
+        <div class="square" id="10">10</div>
+        <div class="square" id="11">11</div>
+        <div class="square" id="12">12</div>
+        <div class="square" id="13">13</div>
+        <div class="square" id="14">14</div>
+        <div class="square" id="15">15</div>
+        <div class="square" id="16">16</div>
+    </div>
 </body>
 
 </html>
